...
        button.layer.masksToBounds = true
        button.addTarget(
            self,
            action: #selector(didTapLoginButton),
            for: .touchUpInside
        )
        button.accessibilityIdentifier = "Authenticate" 
        return button
    }()
    
    // MARK: - Public Properties
    weak var delegate: AuthViewControllerDelegate?
    
...
