...
        label.font = UIFont.systemFont(ofSize: 13, weight: .regular)
        return label
    }()
    
    let likeButton: UIButton = {
        let button = UIButton(type: .custom)
        button.accessibilityIdentifier = "LikeButton"
        return button
    }()
    
    private let gradientLayer = CAGradientLayer()
    
    // MARK: - Init
...
